# aoc-2024-rust

./: .env.example  Cargo.toml
aoc_common/: Cargo.toml
aoc_common/src/: day.rs  input_fetcher.rs  lib.rs
benches/: day_02.rs  day_bench.rs  random_bench.rs
src/: days.rs  main.rs
src/days/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  day_26.rs  day_27.rs  day_28.rs  day_29.rs  day_30.rs
tests/: it_day.rs  it_day_01.rs  it_day_02.rs  it_day_03.rs  it_day_04.rs  it_day_05.rs  it_day_06.rs  it_day_07.rs  it_day_08.rs  it_day_09.rs  it_day_10.rs  it_day_11.rs  it_day_12.rs  it_day_13.rs  it_day_14.rs  it_day_15.rs  it_day_16.rs  it_day_17.rs  it_day_18.rs  it_day_19.rs  it_day_20.rs  it_day_21.rs  it_day_22.rs  it_day_23.rs  it_day_24.rs  it_day_25.rs  it_day_26.rs  it_day_27.rs  it_day_28.rs  it_day_29.rs  it_day_30.rs
