[package]
name = "aoc-2024-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
dotenvy = "0.15.7"
aoc_common = { path = "aoc_common" }

[dev-dependencies]
criterion = "0.5.1"

[workspace]
members = [ "aoc_common" ]

[[bench]]
name = "day_bench"
harness = false

