[package]
name = "aoc-2024-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
dotenvy = "0.15.7"
aoc_common = { path = "aoc_common" }
itertools = "0.13.0"

[dev-dependencies]
criterion = "0.5.1"

[workspace]
members = [ "aoc_common" ]

[[bin]]
name = "aoc-2024-rust"
path = "src/main.rs"
test = false

[[bench]]
name = "day_bench"
harness = false

[[bench]]
name = "day_02"
harness = false

[[bench]]
name = "random_bench"
harness = false

